--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vitejs/plugin-react": "^5.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.8.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
